# PythonWebArchitecture

./: docker-compose.yml  model.py  orm.py  pyproject.toml  repository.py  test_allocate.py
.github/workflows/: test.yml
adapters/: orm.py  repository.py
tests/: conftest.py
tests/integration/: test_repository.py
tests/unit/: test_allocate.py  test_batches.py
