[project]
name = "pythonpatterns"
version = "0.0.1"
description = ""
authors = [
    {name = "DiSkills"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
